# kanshi-conf-gui

./: .gitignore  README.md  meson.build  org.erikr.kanshi-conf-gui.json
data/: meson.build  org.erikr.kanshi-conf-gui.appdata.xml.in  org.erikr.kanshi-conf-gui.desktop.in  org.erikr.kanshi-conf-gui.gschema.xml
po/: POTFILES  meson.build
src/: kanshi_conf_gui.gresource.xml  main.vala  meson.build
src/configure/: configure.ui  configure.vala
src/parser/: parser.vala
src/row/: row.ui  row.vala
src/window/: window.ui  window.vala
